# RRL

./: .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  fetch_assets.bash  run_benchmarks.bash  simd_test.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: analyze.yml  cd.yml  ci.yml  documentation.yml
benchmarks/: CMakeLists.txt  swr_opencv_rungholt.cpp
benchmarks/reports/: Intel_Core_i5-10500_CPU_@_3.10GHz_scalar_results.json  Intel_Core_i5-10500_CPU_@_3.10GHz_simd_results.json  Intel_Core_i5-7500_CPU_@_3.40GHz_scalar_results.json  scalar_results.json  simd_results.json  unknown_scalar_results.json  unknown_simd_results.json
cmake/: RRLConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  formula_circuit.cpp  game_of_live.cpp  opencv_backend.cpp  opencv_cube.cpp  opencv_robot.cpp  opencv_rungholt.cpp  opengl_glfw_cube.cpp  opengl_glfw_rungholt.cpp  opengl_opencv_cube.cpp  stream_harness.cpp  swr_glfw_robot.cpp  swr_opencv_cube.cpp  swr_opencv_robot.cpp  swr_opencv_rungholt.cpp
include/RRL/: RRLEngine.hpp  RRLTypes.hpp
include/RRL/asset/: AssetTypes.hpp  ImageAsset.hpp  MaterialAsset.hpp  MeshAsset.hpp
include/RRL/camera/: CameraConventions.hpp  CameraModels.hpp  CameraSystem.hpp
include/RRL/data/: AssetManager.hpp  ImageData.hpp  MaterialData.hpp  MeshData.hpp
include/RRL/debug/: AssetDebugTypes.hpp  AssetManagerDebugger.hpp  RHIDebugTypes.hpp  RHIDebugger.hpp  SceneDebugTypes.hpp  SceneManagerDebugger.hpp  TFDebugTypes.hpp  TFDebugger.hpp
include/RRL/io/: ImageIO.hpp  PrefabIO.hpp
include/RRL/modules/: AssetModule.hpp  CameraModule.hpp  DebugModule.hpp  RHIModule.hpp  SceneModule.hpp  TFModule.hpp
include/RRL/rhi/: RHI.hpp  RHIAPI.hpp  RHIBackend.hpp  RHILayers.hpp  RHITypes.hpp
include/RRL/scene/: SceneManager.hpp  SceneTypes.hpp
include/RRL/tf/: TFTypes.hpp  TransformComponents.hpp  TransformTree.hpp
src/asset/: AssetManager.cpp  PrefabBlueprintManager.cpp  SynchronizationSystems.cpp
src/camera/: CameraManager.cpp  CameraSystem.cpp
src/core/: RRLEngine.cpp
src/data/: AssetManager.cpp  SynchronizationSystems.cpp
src/debug/: AssetDebugger.cpp  AssetManagerDebugger.cpp  RHIDebugger.cpp  SceneDebugger.cpp  SceneManagerDebugger.cpp  TFDebugger.cpp
src/include/RRL/: DebugMacros.hpp  EngineContext.hpp  EnttCasting.hpp
src/include/RRL/asset/: AssetCache.hpp  AssetManager.hpp  AssetReferenceCounter.hpp  MaterialComponents.hpp  MeshComponents.hpp  PrefabBlueprintManager.hpp  PrefabCacheNodes.hpp  SynchronizationSystems.hpp  TextureComponents.hpp
src/include/RRL/camera/: CameraComponents.hpp  CameraManager.hpp  CameraSystem.hpp
src/include/RRL/data/: AssetCache.hpp  AssetReferenceCounter.hpp  MaterialComponents.hpp  MeshComponents.hpp  SynchronizationSystems.hpp  TextureComponents.hpp
src/include/RRL/debug/: AssetDebugger.hpp  RHIDebugger.hpp  SceneDebugger.hpp  TFDebugger.hpp
src/include/RRL/rhi/: RHI.hpp  RHIBackend.hpp  RHIBackendManager.hpp  RHI_Internal.hpp
src/include/RRL/rhi/opengl/: EmbeddedShaders.hpp  Shader.hpp  ShaderManager.hpp
src/include/RRL/rhi/software/: SIMDTypes.hpp  SWRMath.hpp  SWRRasterizer.hpp  SWRRenderer.hpp  SWRTypes.hpp
src/include/RRL/scene/: PrefabComponents.hpp  PrefabInstance.hpp  PrefabInstanceManager.hpp  PrefabManager.hpp  SceneCache.hpp  SceneEnvironment.hpp  SceneManager.hpp
src/include/RRL/tf/: TFComponents.hpp  TransformTree.hpp
src/io/: ImageIO.cpp  PrefabIO.cpp
src/modules/: AssetModule.cpp  CameraModule.cpp  DebugModule.cpp  RHIModule.cpp  SceneModule.cpp  TFModule.cpp
src/rhi/: RHI.cpp  RHIAPI.cpp
src/rhi/opencv/: OpenCVRenderer.cpp
src/rhi/opengl/: OpenGLRenderer.cpp  Shader.cpp  ShaderManager.cpp
src/rhi/opengl/shaders/: point_cloud.frag  point_cloud.vert  ui2d.frag  ui2d.vert
src/rhi/software/: SWRMath_Highway.cpp  SWRMath_Scalar.cpp  SWRRasterizer.cpp  SWRRasterizer_Highway.cpp  SWRRasterizer_Scalar.cpp  SWRRenderer.cpp  SoftwareRenderer.cpp
src/rhi/window/: GLFWWindow.cpp  OpenCVWindow.cpp
src/scene/: PrefabInstanceManager.cpp  PrefabManager.cpp  SceneManager.cpp
src/tf/: TFComponents.cpp  TransformTree.cpp
test/: CMakeLists.txt  asset_module_tests.cpp  camera_module_tests.cpp  prefrab_module_tests.cpp  scene_module_tests.cpp  tf_module_tests.cpp  transform_tree_test.cpp
